# picasu

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  README.md  TODO.md  compose.yaml  deny.toml  justfile
.opencode/: opencode.json
.plan/: pre01-plan.md  schema.json
backend/: Cargo.toml  build.rs  deny.toml  openapi.json
docs/: CONFIG.md  FRONTEND.md  SUMMARY.md  book.toml  config.md  database.md  design.md  (+9 more)
gallery-backend/: Cargo.toml  build.rs  deny.toml  installer.nsi  openapi.json
gallery-backend/.githooks/: pre-commit
gallery-backend/src/: lib.rs  main.rs  openapi.rs
gallery-backend/src/operations/: dir_album.rs
gallery-backend/src/operations/indexation/: extract_keywords.rs  generate_compressed_video.rs  generate_dynamic_image.rs  generate_thumbnail.rs  generate_width_height.rs  mod.rs
gallery-backend/src/operations/initialization/: folder.rs
gallery-backend/src/operations/utils/: image_path.rs  mod.rs
gallery-backend/src/process/: info.rs  initialization.rs  mod.rs
gallery-backend/src/public/: error_data.rs  mod.rs  tui.rs
gallery-backend/src/public/constant/: mod.rs  ser_de.rs  storage.rs
gallery-backend/src/public/db/expire/: new.rs
gallery-backend/src/public/db/tree/: read_tags.rs
gallery-backend/src/public/db/tree_snapshot/: new.rs
gallery-backend/src/public/structure/: abstract_data.rs  config.rs  mod.rs
gallery-backend/src/public/structure/album/: combined.rs  share.rs
gallery-backend/src/public/structure/expression/: generate_filter.rs  mod.rs
gallery-backend/src/public/structure/response/: database_timestamp.rs
gallery-backend/src/router/: builder.rs
gallery-backend/src/router/fairing/: auth_utils.rs  guard_hash.rs  guard_read_only_mode.rs  guard_timestamp.rs
gallery-backend/src/router/get/: get_album_index.rs  get_config.rs  get_data.rs  get_fs_completion.rs  get_img.rs  get_list.rs  get_prefetch.rs  mod.rs
gallery-backend/src/router/post/: album_index.rs  authenticate.rs  create_dir_album.rs  create_share.rs  import_config.rs  import_folder.rs  index.rs  mod.rs  post_upload.rs
gallery-backend/src/router/put/: edit_album.rs  edit_config.rs  edit_share.rs  edit_tag.rs  regenerate_thumbnail.rs  reindex.rs
gallery-backend/src/tasks/actor/: album_index.rs  deduplicate.rs  folder_import.rs  index.rs  mod.rs
gallery-backend/src/tasks/batcher/: start_watcher.rs  update_tree.rs
gallery-backend/src/tests/: backend_api.rs  bootstrap.rs  e2e.rs  fixtures.rs  mod.rs  scenarios_generated.rs  test_generator_generated.rs
gallery-backend/src/tests/fixtures/: api.rs  internal.rs  jpeg.rs  mod.rs
gallery-backend/src/workflow/: mod.rs
gallery-backend/tests/: e2e_config.rs  e2e_first_launch.rs
gallery-backend/tests/scenarios/: assign_album_rejects_manual_album.yaml  create_empty_album_removed_k.yaml
gallery-backend/tests/scenarios/selftest/: json_assert_catches_wrong_value.yaml
utils/plan/: Cargo.toml
utils/plan/src/: main.rs  tui.rs
xtask/: Cargo.toml
xtask/data/: schema.json
xtask/data/scenarios/backend/: album_visible_via_get_data_after_assign_q.yaml  assign_album_registered_g.yaml  complex_move_between_albums_x.yaml  complex_tags_survive_assign_and_reindex_y.yaml  create_dir_album.yaml  dir_album_parent_child_d.yaml  image_serving_survives_album_move_v.yaml  photo_tags_reflect_injected_metadata_b.yaml  tags_visible_via_get_data_o.yaml  watcher_discovers_new_file.yaml
xtask/data/scenarios/generator/: file_exists_catches_missing.yaml
xtask/data/scenarios/ui/: albums-page.yaml
xtask/src/: generator.rs  lib.rs  main.rs  openapi.rs  plan.rs  test_image.rs
xtask/src/fixtures/: discover.rs  wait.rs
(+547 files in other folders)
