[package]
name = "xtask"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

# Note: test-image is used as library in Rust backend generator and as
# an executable in Typescript frontend generator. We cannot call cargo
# from inside Rust and we don't want to worry about always building
# the latest binary, so here it is.

[lib]
name = "xtask"
path = "src/lib.rs"

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
rand = "0.10"
clap = { version = "4", features = ["derive"] }
termcolor = "1.3"
little_exif = "0.6"
iptc = "0.3"
rayon = "1"
