[package]
name = "plan"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[[bin]]
name = "plan"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
termcolor = "1.3"
ratatui = "0.30"
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
pulldown-cmark = "0.12"
